wordpress-persistent-disks/cavea-wp-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: wordpress-webserver
    app.kubernetes.io/name: wordpress-1
  name: wordpress-1-wordpress-svc
  namespace: cavea-wp
  ownerReferences:
  - apiVersion: app.k8s.io/v1beta1
    blockOwnerDeletion: true
    kind: Application
    name: wordpress-1
    uid: fc9e5eb7-b20d-4447-8549-386d6fd76fb4
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/component: wordpress-webserver
    app.kubernetes.io/name: wordpress-1
  type: NodePort
