wordpress-persistent-disks/cavea-wp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cavea-wp-ingress
  namespace: cavea-wp
  annotations:
    kubernetes.io/ingress.global-static-ip-name: empire-sports-wp
    networking.gke.io/managed-certificates: cavea-wp-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: empiresports.gg
    http:
      paths:
      - backend:
          service:
            name: wordpress-1-wordpress-svc
            port: 
              number: 80
