wordpress-persistent-disks/wordpress-service.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_wordpress_persistent_disks_wordpress_service_service_wordpress]
apiVersion: v1
kind: Service
metadata:
  name: cavea-wp-backend
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: empire-sports-wp
    networking.gke.io/managed-certificates: cavea-wp-cert
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: cavea-wp-backend
      port:
        number: 80


# if you need this code below, just delete the hash.
# ---
# apiVersion: v1
# kind: Service
# metadata:
#  labels:
#    app: wordpress
#  name: wordpress
# spec:
#  type: LoadBalancer
#  ports:
#    - port: 80
#      targetPort: 80
#      protocol: TCP
#  selector:
#    app: wordpress
# [END gke_wordpress_persistent_disks_wordpress_service_service_wordpress]
# ---
